stop flicker sometimes

--- a/styles/navigation-panel.less
+++ b/styles/navigation-panel.less
@@ -215,12 +215,6 @@
   }
 }
 
-atom-dock.left, atom-dock.right {
-  .navigation-block {
-    scroll-margin-left: 1e4px;
-  }
-}
-
 atom-dock.bottom {
   .navigation-list {
     white-space: nowrap;
